--- a/webapp/package.json
+++ b/webapp/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser-dynamic": "~8.2.8",
     "@angular/router": "~8.2.8",
     "angular-split": "^3.0.2",
+    "bootstrap": "^4.3.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.4.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
