--- a/service/src/main/resources/ds.properties
+++ b/service/src/main/resources/ds.properties
@@ -1,2 +1,2 @@
-url.ppt.slides=http://localhost:8080/ppt/
-url.content=http://localhost:8080/content/
+url.ppt.slides=http://35.225.128.32:8080/ppt/
+url.content=http://35.225.128.32:8080/content/
