--- a/service/src/main/resources/db.properties
+++ b/service/src/main/resources/db.properties
@@ -1,4 +1,4 @@
-sql.fetch.contentBody=SELECT c.content_body, c.content_type_cd, t.type_name, c.height, c.width FROM content c, content_type t where c.content_type_cd=t.content_type_cd and content_id=?
+sql.fetch.contentBody=SELECT c.content_body, c.content_type_cd, t.type_name, c.height, c.width, c.mime_type FROM content c, content_type t where c.content_type_cd=t.content_type_cd and content_id=?
 sql.fetch.allSlides=SELECT slide_no FROM digi_sign.ppt_slides where content_id=?
 sql.fetch.slideContent=SELECT data FROM ppt_slides where content_id=? and slide_no=?
 sql.save.content=INSERT INTO content (content_body, content_type_cd, height, width, created_at, created_by, updated_at, updated_by) values(?, ?, ?, ?, current_timestamp(), ?, current_timestamp(), ?)
