--- a/service/src/main/resources/db.properties
+++ b/service/src/main/resources/db.properties
@@ -3,3 +3,4 @@ sql.fetch.allSlides=SELECT slide_no FROM digi_sign.ppt_slides where content_id=?
 sql.fetch.slideContent=SELECT data FROM ppt_slides where content_id=? and slide_no=?
 sql.save.content=INSERT INTO content (content_body, content_type_cd, height, width, created_at, created_by, updated_at, updated_by) values(?, ?, ?, ?, current_timestamp(), ?, current_timestamp(), ?)
 sql.save.slide=INSERT INTO ppt_slides (content_id, slide_no, data) values (?, ?, ?)
+sql.fetch.content=SELECT content_id, height, width FROM content ORDER BY RAND() LIMIT 1
